--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     
         <!--====== Slick css ======-->
         <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
+        <!--====== Fontawesome css ======-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <!--====== HEAD PART ENDS ======-->
 <body>
@@ -399,7 +402,7 @@
     <!--====== WORK PART START ======-->
 
     <section id="work" class="work-area pt-125 pb-130">
-        <div class="container">
+        <div class="container position-relative">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="section-title pb-25">
@@ -407,6 +410,12 @@
                         <p>Turning coffee into code</p>
                     </div>
                 </div>
+            </div>
+            <div class="left">
+                <i class="fa fa-hand-point-left"></i>
+            </div>
+            <div class="right">
+                <i class="fa fa-hand-point-right"></i>
             </div>
             <div class="row work-slider">
                 <div class="col-lg-4 col-md-6 col-sm-6">
