--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title text-center pb-30">
-                        <h2 class="title">What I Do?</h2>
+                        <h2 class="title">What I Do</h2>
                         <p>Efficient service and fast turnaround times</p>
                     </div>
                 </div>
@@ -312,8 +312,7 @@
                             <i class="lni-website"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title">Web Development</h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <h4 class="service-title">Web <br> Development</h4>
                         </div>
                     </div>
                 </div>
@@ -323,8 +322,7 @@
                             <i class="lni-mobile"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title">App Design</h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <h4 class="service-title">App <br> Design</h4>
                         </div>
                     </div>
                 </div>
@@ -334,8 +332,7 @@
                             <i class="lni-support"></i>
                         </div>
                         <div class="service-content">
-                            <h4 class="service-title">Consultancy and Support</h4>
-                            <p>Curabitur vitae magna felis. Nulla ac libero ornare, vestibulum lacus quis blandit enimdicta sunt.</p>
+                            <h4 class="service-title">Consultancy <br>&<br> Support</h4>
                         </div>
                     </div>
                 </div>
