--- a/index.html
+++ b/index.html
@@ -285,6 +285,22 @@
                                 </div>
                             </div>
                         </div> <!-- skill item -->
+                        <div class="skill-item mt-25">
+                            <div class="skill-header">
+                                <h6 class="skill-title">FLUTTER</h6>
+                                <div class="skill-percentage">
+                                    <div class="count-box counted">
+                                        <span class="counter">50</span>
+                                    </div>
+                                    %
+                                </div>
+                            </div>
+                            <div class="skill-bar">
+                                <div class="bar-inner">
+                                    <div class="bar progress-line" data-width="50"></div>
+                                </div>
+                            </div>
+                        </div> <!-- skill item -->
                     </div> <!-- about skills -->
                 </div>
             </div>
