--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <!--====== Required meta tags ======-->
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="title" content="Freelance Web & Mobile Developer">
+        <meta name="description" content="Andrew Tay - Web & Mobile Developer">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     
         <!--====== Title ======-->
         <title>Andrew Tay - Web & Mobile Developer</title>
