Add - Current year for footer

--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-text text-center pt-20">
-                            <p>Copyright © 2022. Website created by <a href="#">Andrew Tay</a></p>
+                            <p>Copyright © <span class="footer-year"></span>. Website created by <a href="#">Andrew Tay</a></p>
                         </div> <!-- copyright text -->
                     </div>
                 </div> <!-- row -->
