Add - Github Profile

--- a/index.html
+++ b/index.html
@@ -145,9 +145,7 @@
                         <div class="col-lg-12">
                             <div class="header-social-icon">
                                 <ul>
-                                    <!--<li><a href="#"><i class="lni-facebook-filled"></i></a></li>-->
-                                    <!--<li><a href="#"><i class="lni-twitter-original"></i></a></li>-->
-                                    <!--<li><a href="#"><i class="lni-behance-original"></i></a></li>-->
+                                    <li><a href="https://github.com/andrew-code-everyday" target="_blank"><i class="lni lni-github-original"></i></a></li>
                                     <li><a href="https://www.linkedin.com/in/andrew-tay-23b2021a0/" target="_blank"><i class="lni-linkedin-original"></i></a></li>
                                 </ul>
                             </div> <!-- header social -->
@@ -1044,7 +1042,7 @@
                             </a>
                             <p class="mt-">Curious about everything</p>
                             <ul>
-                                <!--<li><a href="#"><i class="lni-facebook-filled"></i></a></li>-->
+                                <li><a href="https://github.com/andrew-code-everyday" target="_blank"><i class="lni lni-github-original"></i></a></li>
                                 <li><a href="https://www.linkedin.com/in/andrew-tay-23b2021a0/" target="_blank"><i class="lni-linkedin-original"></i></a></li>
                             </ul>
                         </div> <!-- footer content -->
