--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <!--====== Required meta tags ======-->
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="title" content="Freelance Web & Mobile Developer">
-        <meta name="description" content="Andrew Tay - Web & Mobile Developer">
+        <meta name="title" content="Andrew Tay - Freelance Web & Mobile Developer">
+        <meta name="description" content="Need help on your project? Contact me.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     
         <!--====== Title ======-->
@@ -36,6 +36,16 @@
 
         <!--====== Fontawesome css ======-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-W42W20T9V4"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-W42W20T9V4');
+        </script>
     </head>
     <!--====== HEAD PART ENDS ======-->
 <body>
