--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@
                 </div>
             </div>
             <div class="left">
-                <i class="fa fa-hand-point-left"></i>
+                <i class="fa fa-chevron-left"></i>
             </div>
             <div class="right">
-                <i class="fa fa-hand-point-right"></i>
+                <i class="fa fa-chevron-right"></i>
             </div>
             <div class="row work-slider">
                 <div class="col-lg-4 col-md-6 col-sm-6">
