--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
         <!--====== Required meta tags ======-->
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="title" content="Andrew Tay - Freelance Web & Mobile Developer">
-        <meta name="description" content="Need help on your project? Contact me.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <meta name="title" content="Andrew Tay - Freelance Web & Mobile Developer">
+        <meta name="description" content="A 3 years experienced freelance web & mobile developer. Need help on your project? Contact me.">
+        <meta name="keywords" content="website, mobile application, freelance web developer, freelance php developer, freelance website developer, freelance mobile app developer, freelance mobile application developer">
+        <meta name="robots" content="index, follow">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="language" content="English">
+        <meta name="revisit-after" content="1 days">
+        <meta name="author" content="Andrew">
+        
     
         <!--====== Title ======-->
         <title>Andrew Tay - Web & Mobile Developer</title>
