--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                 <div class="row align-items-center">
                     <div class="col-xl-5 col-lg-6">
                         <div class="header-content-right">
-                            <h4 class="sub-title">Hello, I’m</h4>
-                            <h1 class="title">Andrew Tay</h1>
-                            <p>A well experienced  web & mobile developer</p>
+                            <h4 class="sub-title">Hello, I’m Andrew Tay</h4>
+                            <p>A well experienced</p>
+                            <h1 class="title">Freelance web & mobile developer</h1>
                             <a class="main-btn" href="#work">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
