Remove - animation for section title

--- a/index.html
+++ b/index.html
@@ -446,9 +446,9 @@
         <div class="illu-chart-1" data-aos="fade-right">
             <img src="assets/images/illustration/illu-chart-1.png" alt="illu-chart-1">
         </div>
-        <div class="illu-chart-2" data-aos="fade-left">
+        <!-- <div class="illu-chart-2" data-aos="fade-left">
             <img src="assets/images/illustration/illu-chart-2.png" alt="illu-chart-2">
-        </div>
+        </div> -->
         <div class="container position-relative">
             <div class="row">
                 <div class="col-lg-8">
@@ -994,9 +994,9 @@
         <div class="illu-speaker" data-aos="fade-left">
             <img src="assets/images/illustration/illu-speaker.png" alt="Illustration Speaker">
         </div>
-        <div class="illu-chat" data-aos="fade-right">
+        <!-- <div class="illu-chat" data-aos="fade-right">
             <img src="assets/images/illustration/illu-chat.png" alt="Illustration Chat">
-        </div>
+        </div> -->
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
