--- a/index.html
+++ b/index.html
@@ -144,19 +144,19 @@
             </div> <!-- header shape -->
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-xl-5 col-lg-6">
-                        <div class="header-content-right">
+                    <div class="col-xl-12 col-lg-12">
+                        <div class="header-content-right text-center">
                             <h4 class="sub-title">Hello, I’m Andrew Tay</h4>
                             <p>A well experienced</p>
                             <h1 class="title">Freelance web & mobile developer</h1>
                             <a class="main-btn" href="#work">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
-                    <div class="col-lg-6 offset-xl-1">
+                    <!-- <div class="col-lg-6 offset-xl-1">
                         <div class="header-image d-none d-lg-block">
                             <img src="assets/images/banner/hero.png" alt="hero">
-                        </div> <!-- header image -->
-                    </div>
+                        </div> 
+                    </div> -->
                 </div> <!-- row -->
             </div> <!-- container -->
             <div class="header-social">
@@ -195,10 +195,13 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="about-content mt-50">
+                        <div class="about-image-container mb-15">
+                            <img src="assets/images/banner/hero.png" alt="hero" width="120px" height="100%">
+                        </div>
                         <h5 class="about-title">Hi There! I'm Andrew Tay</h5>
-                        <p>An experienced software engineer who <br> constantly seeks out <br> innovative solutions to everyday problems. <br> In my three years in this industry, <br> I contributed to over a dozen projects.</p>
-                        <ul class="clearfix">
-                            <!--<li>
+                        <p>An experienced software engineer who constantly seeks out innovative solutions to everyday problems. In my three years in this industry, I contributed to over a dozen projects.</p>
+                        <!-- <ul class="clearfix">
+                            -<li>
                                 <div class="single-info d-flex align-items-center">
                                     <div class="info-icon">
                                         <i class="lni-calendar"></i>
@@ -207,7 +210,7 @@
                                         <p class="text-color"><span>Date of birth:</span> 19 February 1995</p>
                                     </div>
                                 </div>
-                            </li>-->
+                            </li>
                             <li>
                                 <div class="single-info d-flex align-items-center">
                                     <div class="info-icon">
@@ -216,7 +219,7 @@
                                     <div class="info-text">
                                         <p><span>Email:</span> <a class="text-color" href="mailto:atcc0219@gmail.com">atcc0219@gmail.com</a></p>
                                     </div>
-                                </div> <!-- single info -->
+                                </div>
                             </li>
                             <li>
                                 <div class="single-info d-flex align-items-center">
@@ -226,7 +229,7 @@
                                     <div class="info-text">
                                         <p><span>Phone:</span> <a class="text-color" href="tel:+65 8892-5212">+65 8892-5212</a></p>
                                     </div>
-                                </div> <!-- single info -->
+                                </div>
                             </li>
                             <li>
                                 <div class="single-info d-flex align-items-center">
@@ -236,14 +239,14 @@
                                     <div class="info-text">
                                         <p class="text-color"><span>Location:</span> Singapore</p>
                                     </div>
-                                </div> <!-- single info -->
+                                </div>
                             </li>
-                        </ul>
+                        </ul> -->
                     </div> <!-- about content -->
                 </div>
-                <div class="col-xl-5 offset-xl-1 col-lg-6">
+                <div class="col-lg-6">
                     <div class="about-skills pt-25">
-                        <div class="skill-item mt-25">
+                        <div class="skill-item mt-27">
                             <div class="skill-header">
                                 <h6 class="skill-title">PHP [LARAVEL,OPEN CART, WORDPRESS]</h6>
                                 <div class="skill-percentage">
@@ -259,7 +262,7 @@
                                 </div>
                             </div>
                         </div> <!-- skill item -->
-                        <div class="skill-item mt-25">
+                        <div class="skill-item mt-27">
                             <div class="skill-header">
                                 <h6 class="skill-title">MYSQL</h6>
                                 <div class="skill-percentage">
@@ -275,7 +278,7 @@
                                 </div>
                             </div>
                         </div> <!-- skill item -->
-                        <div class="skill-item mt-25">
+                        <div class="skill-item mt-27">
                             <div class="skill-header">
                                 <h6 class="skill-title">CSS [SCSS]</h6>
                                 <div class="skill-percentage">
@@ -291,7 +294,7 @@
                                 </div>
                             </div>
                         </div> <!-- skill item -->
-                        <div class="skill-item mt-25">
+                        <div class="skill-item mt-27">
                             <div class="skill-header">
                                 <h6 class="skill-title">JAVASCRIPT [jQuery,React JS]</h6>
                                 <div class="skill-percentage">
@@ -307,7 +310,7 @@
                                 </div>
                             </div>
                         </div> <!-- skill item -->
-                        <div class="skill-item mt-25">
+                        <div class="skill-item mt-27">
                             <div class="skill-header">
                                 <h6 class="skill-title">FLUTTER</h6>
                                 <div class="skill-percentage">
