--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua nostrud.</p> -->
                         <ul>
                             <li><a class="main-btn custom" href="assets/Resume.pdf" download>download cv</a></li>
-                            <li><a class="main-btn custom-2" href="#contact">hire me</a></li>
+                            <li><a class="main-btn custom-2" href="#contact">Contact Me</a></li>
                         </ul>
                     </div> <!-- call action content -->
                 </div>
