Update animation flow in direction

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
     <!--====== WORK PART START ======-->
 
     <section id="work" class="work-area pt-125 pb-130 position-relative">
-        <div class="illu-chart-1" data-aos="fade-right">
+        <div class="illu-chart-1" data-aos="fade-left">
             <img src="assets/images/illustration/illu-chart-1.png" alt="illu-chart-1">
         </div>
         <!-- <div class="illu-chart-2" data-aos="fade-left">
