--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                 <div class="col-lg-8">
                     <div class="section-title pb-25">
                         <h2 class="title gradient-title">My Recent Works</h2>
-                        <p>Turning coffee into code</p>
+                        <p>Turning coffee into beautiful website</p>
                     </div>
                 </div>
             </div>
