Add dSimpleWay project to slider

--- a/index.html
+++ b/index.html
@@ -489,6 +489,15 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="single-work text-center mt-30">
                         <div class="work-image">
+                            <img data-lazy="assets/images/work/dsimpleway.png" alt="work" class="lazy">
+                        </div>
+                        <a href="https://www.dsimpleway.com/" target="_blank" class="work-title mt-15 text-color">dSimpleWay</a>
+                        <a class="tool-tip" href="https://www.dsimpleway.com/" target="_blank">I'm Clickable!</a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="single-work text-center mt-30">
+                        <div class="work-image">
                             <img data-lazy="assets/images/work/spinergy.jpg" alt="work" class="lazy">
                         </div>
                         <a href="https://www.spinergy.com.sg/" target="_blank" class="work-title mt-15 text-color">Spinergy</a>
